# ServerUI

./: .gitignore  CMakeLists.txt  WindowsInstall.cmd
include/: ServerUI.h  imguipp.h  menu.h  serverRequests.h  serverUI.h  settings.h
src/: CMakeLists.txt  Main.cpp  ServerUI.h  imguipp.cpp  menu.cpp  serverRequests.cpp  serverUI.cpp  sserverUI.cpp
